[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/ui/ui_elements/button/GameButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/screens/MainMenuScreen.gd" type="Script" id=2]
[ext_resource path="res://resources/themes/taskbar_theme.tres" type="Theme" id=3]
[ext_resource path="res://resources/sprites/desktop/Desktop1.png" type="Texture" id=4]
[ext_resource path="res://resources/images/forkilft-banner.png" type="Texture" id=5]
[ext_resource path="res://resources/images/pc_protection_decoration.png" type="Texture" id=6]
[ext_resource path="res://resources/images/pc_decoration.png" type="Texture" id=7]
[ext_resource path="res://resources/images/pc_webcam_decoration.png" type="Texture" id=8]
[ext_resource path="res://resources/images/grid-screen.png" type="Texture" id=9]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform sampler2D samp;
uniform float lineIntensity = 1.0f;
uniform float lineWidth = 0.4f;
uniform float frequency = 2f;

void fragment() {
  vec4 color = vec4(1);
  vec2 uv = UV;
  float cosTime = cos(TIME * frequency);
  // movement of texture
  uv += TIME;
  // draw line given its width
  // smoothstep returns a gradient between arg1 and agr2, 
  // 	returns 0 if arg3 < arg1
  //	returns gradient if arg3 >= arg1 and arg3 <= arg2
  // 	returns 1 if arg3 > arg2
  color.rgb = vec3(smoothstep(lineWidth + cosTime, cosTime, UV.x));
  color.rgb *= vec3(smoothstep(cosTime, lineWidth + cosTime, UV.x));
  
  // add texture to the line
  color *= texture(samp, uv);
  color.a = color.r * color.a;
  // remove green and blue
  //color.r = color.b = 0f;
  // add brightness to line
  COLOR = vec4(vec3(color.rgb * lineIntensity), color.a);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/lineIntensity = 75.0
shader_param/lineWidth = 0.3
shader_param/frequency = 1.0
shader_param/samp = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.215686, 0.317647, 0.498039, 0.941176 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.286275, 0.454902, 0.74902, 0.941176 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 8.0
expand_margin_right = 8.0
expand_margin_top = 28.0
expand_margin_bottom = 8.0

[sub_resource type="Theme" id=4]
WindowDialog/colors/title_color = Color( 0, 0, 0, 1 )
WindowDialog/constants/close_h_ofs = 18
WindowDialog/constants/close_v_ofs = 18
WindowDialog/constants/scaleborder_size = 4
WindowDialog/constants/title_height = 20
WindowDialog/fonts/title_font = null
WindowDialog/icons/close = null
WindowDialog/icons/close_highlight = null
WindowDialog/styles/panel = SubResource( 3 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background black" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.631373 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
visible = false
anchor_left = 0.286
anchor_top = 0.121
anchor_right = 0.715
anchor_bottom = 0.879
margin_left = -0.0800171
margin_top = -0.120003
margin_right = -0.200073
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background PC" type="TextureRect" parent="Margin"]
margin_right = 548.0
margin_bottom = 545.0
texture = ExtResource( 4 )
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Margin"]
margin_right = 548.0
margin_bottom = 545.0
color = Color( 0, 0, 0, 0.631373 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="Margin"]
margin_right = 548.0
margin_bottom = 545.0
custom_constants/margin_right = 60
custom_constants/margin_top = 60
custom_constants/margin_left = 60
custom_constants/margin_bottom = 60

[node name="ButtonsVBox" type="VBoxContainer" parent="Margin"]
margin_right = 548.0
margin_bottom = 545.0
custom_constants/separation = 20
alignment = 1

[node name="ForkliftLogo" type="TextureRect" parent="Margin/ButtonsVBox"]
margin_top = 48.0
margin_right = 549.0
margin_bottom = 176.0
rect_min_size = Vector2( 0, 128 )
texture = ExtResource( 5 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" parent="Margin/ButtonsVBox" instance=ExtResource( 1 )]
margin_left = 154.0
margin_top = 196.0
margin_right = 394.0
margin_bottom = 256.0
rect_min_size = Vector2( 240, 60 )
size_flags_horizontal = 4
text = "Play"

[node name="OptionsButton" parent="Margin/ButtonsVBox" instance=ExtResource( 1 )]
margin_left = 154.0
margin_top = 276.0
margin_right = 394.0
margin_bottom = 336.0
rect_min_size = Vector2( 240, 60 )
size_flags_horizontal = 4
text = "Options"

[node name="CreditsButton" parent="Margin/ButtonsVBox" instance=ExtResource( 1 )]
margin_left = 154.0
margin_top = 356.0
margin_right = 394.0
margin_bottom = 416.0
rect_min_size = Vector2( 240, 60 )
size_flags_horizontal = 4
text = "Credits"

[node name="ExitButton" parent="Margin/ButtonsVBox" instance=ExtResource( 1 )]
margin_left = 154.0
margin_top = 436.0
margin_right = 394.0
margin_bottom = 496.0
rect_min_size = Vector2( 240, 60 )
size_flags_horizontal = 4
text = "Exit"

[node name="ScreenEffect" type="TextureRect" parent="Margin"]
material = SubResource( 2 )
margin_right = 548.0
margin_bottom = 545.0
mouse_filter = 2
texture = ExtResource( 4 )
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Foreground PC" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 7 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PC Decoration" type="TextureRect" parent="Foreground PC"]
anchor_left = 0.437
anchor_top = 0.001
anchor_right = 0.558
anchor_bottom = 0.097
margin_left = 0.421753
margin_top = 0.28
margin_right = 0.541687
margin_bottom = 0.159996
mouse_filter = 2
texture = ExtResource( 8 )
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PC Decoration2" type="TextureRect" parent="Foreground PC"]
anchor_left = 0.219
anchor_top = 0.355
anchor_right = 0.269
anchor_bottom = 0.628
margin_right = -0.320038
margin_bottom = -0.160004
mouse_filter = 2
texture = ExtResource( 6 )
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin2" type="MarginContainer" parent="."]
margin_left = 1180.0
margin_top = 620.0
margin_right = 1280.0
margin_bottom = 720.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/margin_right = 75
custom_constants/margin_bottom = 75
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisclaimerButton" parent="Margin2" instance=ExtResource( 1 )]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "i"

[node name="GrayOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.631373 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisclaimerDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -80.0
margin_right = 300.0
margin_bottom = 80.0
rect_min_size = Vector2( 600, 160 )
size_flags_horizontal = 5
size_flags_vertical = 5
theme = SubResource( 4 )
window_title = "Warnung!"
dialog_text = "Disclaimer: 
This game does not aim to help you remove real ransomware or viruses from your devices.
We strong condemn any kind of virus or ransomware.
Keep your technical protected and be careful with any kind of software you use."
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="Margin/ButtonsVBox/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Margin/ButtonsVBox/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Margin/ButtonsVBox/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="Margin/ButtonsVBox/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="Margin2/DisclaimerButton" to="." method="_on_DisclaimerButton_pressed"]
[connection signal="popup_hide" from="DisclaimerDialog" to="." method="_on_AcceptDialog_popup_hide"]
